--- a/layouts/shortcodes/tmp.html
+++ b/layouts/shortcodes/tmp.html
@@ -6,54 +6,218 @@
   <tr>
     <th style="width:7.5%;text-align:right">Date</th>
     <th style="width:7.5%">Course</th>
-    <th style="width:7.5%;text-align:center">Lecture561</th>
-    <th style="width:7.5%;text-align:center">Assignment561</th>
-    <th style="width:7.5%;text-align:center">Lecture564</th>
-    <th style="width:7.5%;text-align:center">Assignment564</th>
-    <th style="width:7.5%;text-align:center">Examination</th>
+    <th style="width:7.5%;text-align:center">Notes</th>
+    <th style="width:7.5%;text-align:center">Assignments</th>
+    <th style="width:7.5%;text-align:center">Labs</th>
+    <th style="width:7.5%;text-align:center">Examinations</th>
     <th style="width:7.5%;text-align:center">Temp</th>
     <th style="width:7.5%;text-align:center">Backup</th>
   </tr>
 
-  {{ range $.Site.Data.lessons }}
-    {{range . }}
+  {{ range $.Site.Data.lessons.stat561 }}
+
     <tr>
+      <th>{{ .title }}</th>
       <td align="right">{{ .date }}</td>
-      <td>{{ .title }}</td>
       
-      {{ if .lecture561 }}
-      <td align="center"><a href="{{ .Site.baseurl }}/lecture561/{{ .lecture561 }}">
+      {{ if .note }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .note }}">
           <i class="fa fa-book fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
           <i class="fa fa-book fa-lg"></i></font></td>
       {{ end }}
 
-      {{ if .assignment561 }}
-      <td align="center"><a href="{{ .Site.baseurl }}/assignment561/{{ .assignment561 }}">
+      {{ if .hw }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .hw }}">
           <i class="fa fa-keyboard-o fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
           <i class="fa fa-keyboard-o fa-lg"></i></font></td>
       {{ end }}
       
-      {{ if .lecture564 }}
-      <td align="center"><a href="{{ .Site.baseurl }}/lecture564/{{ .lecture564  }}">
+      {{ if .lab }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .lab  }}">
           <i class="fa fa-file-image-o  fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
           <i class="fa fa-file-image-o  fa-lg"></i></font></td>
       {{ end }}
       
-      {{ if .assignment564 }}
-      <td align="center"><a href="{{ .Site.baseurl }}/assignment564/{{ .assignment564 }}">
+      {{ if .ex }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .ex }}">
+          <i class="fa fa-check-circle fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-check-circle fa-lg"></i></font></td>
+      {{ end }}
+
+      {{ if .temp }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .temp }}">
+          <i class="fa fa-check-circle fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-check-circle fa-lg"></i></font></td>
+      {{ end }}
+
+      {{ if .backup }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .backup }}">
           <i class="fa fa-check-circle fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
           <i class="fa fa-check-circle fa-lg"></i></font></td>
       {{ end }}
     </tr>
-    {{ end }}
+
+  {{ end }}
+  
+  {{ range $.Site.Data.lessons.stat564 }}    
+
+    <tr>
+      <th>{{ .title }}</th>
+      <td align="right">{{ .date }}</td>
+      
+      {{ if .note }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .note }}">
+          <i class="fa fa-book fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-book fa-lg"></i></font></td>
+      {{ end }}
+
+      {{ if .hw }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .hw }}">
+          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
+      {{ end }}
+      
+      {{ if .lab }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .lab  }}">
+          <i class="fa fa-file-image-o  fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-file-image-o  fa-lg"></i></font></td>
+      {{ end }}
+      
+      {{ if .ex }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .ex }}">
+          <i class="fa fa-check-circle fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-check-circle fa-lg"></i></font></td>
+      {{ end }}
+
+      {{ if .temp }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .temp }}">
+          <i class="fa fa-check-circle fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-check-circle fa-lg"></i></font></td>
+      {{ end }}
+
+      {{ if .backup }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .backup }}">
+          <i class="fa fa-check-circle fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-check-circle fa-lg"></i></font></td>
+      {{ end }}
+    </tr>
+
   {{ end }}
 
+</table>
+
+
+
+
+
+
+<table class="table" style="max-width:900px;margin-left:auto;margin-right:auto">
+  <tr>
+    <td align="center">Course</td>
+    <td align="center">STAT561</td>
+    <td align="center">STAT562</td>
+    <td align="center">STAT563</td>
+    <td align="center">STAT564</td>
+    <td align="center">STAT565</td>
+    <td align="center">STAT566</td>
+    <td align="center">STAT551</td>
+    <td align="center">USP537</td>
+  </tr>
+
+  {{ range $.Site.Data.lessons }}
+    {{range . }}
+    <tr>
+       <th style="width:7.5%;text-align:center">{{ .title }}</th>
+       <th style="width:7.5%;text-align:right">{{ .date }}</th>
+      
+      {{ if .stat561 }}
+      <th style="width:7.5%;text-align:center"><a href="{{ .Site.baseurl }}/stat561/{{ .stat561 }}">
+          <i class="fas fa-file-alt"></i></a></th>
+      {{ else }}
+        <th align="center"><font color="f1f1f1">
+          <i class="fas fa-file-alt"></i></font></th>
+      {{ end }}
+
+      {{ if .stat562 }}
+      <th style="width:7.5%;text-align:center"><a href="{{ .Site.baseurl }}/stat562/{{ .stat562 }}">
+          <i class="fas fa-file-alt"></i></a></th>
+      {{ else }}
+        <th align="center"><font color="f1f1f1">
+          <i class="fas fa-file-alt"></i></font></th>
+      {{ end }}
+
+      {{ if .stat563 }}
+      <th style="width:7.5%;text-align:center"><a href="{{ .Site.baseurl }}/stat563/{{ .stat563 }}">
+          <i class="fas fa-file-alt"></i></a></th>
+      {{ else }}
+        <th align="center"><font color="f1f1f1">
+          <i class="fas fa-file-alt"></i></font></th>
+      {{ end }}
+
+      {{ if .stat564 }}
+      <th style="width:7.5%;text-align:center"><a href="{{ .Site.baseurl }}/stat564/{{ .stat564 }}">
+          <i class="fas fa-file-alt"></i></a></th>
+      {{ else }}
+        <th align="center"><font color="f1f1f1">
+          <i class="fas fa-file-alt"></i></font></th>
+      {{ end }}
+
+      {{ if .stat565 }}
+      <th style="width:7.5%;text-align:center"><a href="{{ .Site.baseurl }}/stat565/{{ .stat565 }}">
+          <i class="fas fa-file-alt"></i></a></th>
+      {{ else }}
+        <th align="center"><font color="f1f1f1">
+          <i class="fas fa-file-alt"></i></font></th>
+      {{ end }}
+
+      {{ if .stat566 }}
+      <th style="width:7.5%;text-align:center"><a href="{{ .Site.baseurl }}/stat566/{{ .stat566 }}">
+          <i class="fas fa-file-alt"></i></a></th>
+      {{ else }}
+        <th align="center"><font color="f1f1f1">
+          <i class="fas fa-file-alt"></i></font></th>
+      {{ end }}
+
+      {{ if .stat551 }}
+      <th style="width:7.5%;text-align:center"><a href="{{ .Site.baseurl }}/stat551/{{ .stat551 }}">
+          <i class="fas fa-file-alt"></i></a></th>
+      {{ else }}
+        <th align="center"><font color="f1f1f1">
+          <i class="fas fa-file-alt"></i></font></th>
+      {{ end }}
+
+      {{ if .usp537 }}
+      <th style="width:7.5%;text-align:center"><a href="{{ .Site.baseurl }}/usp537/{{ .usp537 }}">
+          <i class="fas fa-file-alt"></i></a></th>
+      {{ else }}
+        <th align="center"><font color="f1f1f1">
+          <i class="fas fa-file-alt"></i></font></th>
+      {{ end }}
+    </tr>
+    {{ end }}
+  {{ end }}
 </table>
